@@ -5,5 +5,4 @@ MANIFEST
 t/000_tests.t
 t/950_pod.t
 t/960_pod_coverage.t
-t/990_kwalitee.t
 lib/Algorithm/Graphs/TransitiveClosure.pm
