@@ -1,3 +1,6 @@
+Version
++ Removed Kwalitee tests
+
 Version 2009110901
 + Modernized Makefile.PL
 + POD and Kwalitee tests
